fix: Section hero on mobile wrong width

--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -24,7 +24,8 @@ body {
 section {
   position: relative;
 
-  width: 100vw;
+  width: 100%;
+  max-width: 100vw;
 
   scroll-snap-align: start;
   scroll-snap-stop: always;
@@ -42,6 +43,9 @@ section {
 
   section {
     flex-shrink: 0;
+    
+    width: 100%;
+    max-width: 100vw;
 
     .section-hero {
       position: relative;
